Tue Feb 11 22:19:39 2003  Krishnakumar B  <kitty@cse.wustl.edu>

        * examples/DLL/Makefile.Today (SHLIB):
        * examples/DLL/Makefile.Newsweek (SHLIB):

          Removed extra space at the end which caused compilation to
          break. Thanks to Bill Cassanova <BCassanova@weather.com> for
          reporting the problem.

Wed Feb 12 00:00:12 UTC 2003  Craig Rodrigues  <crodrigu@bbn.com>

	* ace/OS.h:
	* ace/OS.i (thr_setprio): Add a new default thr_policy parameter which
	  allows us to explicitly set the policy in pthread_setschedparam().
	  Introduced to eliminate a bug discovered in RT-CORBA implementation.

Tue Feb 11 14:01:21 2003  Nanbor Wang  <nanbor@cs.wustl.edu>

	* vc7_nightly.mwc: Added a temporary file specifying core nightly
	  build targets.  Notice this file includes both ACE and TAO.

	* ace/ace.mpc: Added XML_Svc_Conf.cpp.

	* ace/SSL/ssl.mpc: Fixed dllflags setting.

Mon Feb 10 18:08:12 2003  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* THANKS: Added Otis Nyandoro to the hall of fame.

Mon Feb 10 18:02:41 2003  Steve Huston  <shuston@riverace.com>

        * ace/OS.h: Don't special-case SEH support on ACE_HAS_WINCE. First,
          CE can do SEH; second, the switching of this on/off can and should
          be done in the config file.

        * ace/config-win32-common.h: Enable ACE_HAS_WIN32_STRUCTURAL_EXCEPTIONS
          for WinCE.

          Thanks to Emmanuel Thevenot Beaufort
          <emmanuel.thevenot-beaufort@jci.com> for this fix.

        * ace/Handle_Set.{h i}: Remove the ACE_Handle_Set destructor for
          ACE_HAS_WINCE. The need for this predates the supported vc 3 and 4
          compilers, and having it in there triggers an SEH warning.

        * ace/SPIPE_Stream.i: Follow-up to:
          Mon Feb 10 09:22:04 2003  Phil Mesnier  <mesnier_p@ociweb.com>
          Added the need for ACE_HAS_WINSOCK2 to enable this code. The calls
          and structures used aren't available in Winsock1.
